cleanup deprecation warnings about ansible.netcommon

--- a/requirements.yml
+++ b/requirements.yml
@@ -4,6 +4,7 @@ roles:
   - name: bertvv.bind
 collections:
   - name: ansible.posix
+  - name: "ansible.utils"
   - name: community.docker
   - name: community.general
   - name: community.mysql
