run ansible on python 3.8 on freebsd

--- a/roles/ansible-cron/tasks/main.yml
+++ b/roles/ansible-cron/tasks/main.yml
@@ -25,6 +25,7 @@
   loop:
     - "ara"
     - "jmespath" # For community.general.json_query
+    - "netaddr"
 
 - name: Add ansible user to srcs group
   ansible.builtin.user:
