properly validate /etc/network/interfaces to prevent errors from stopping the network from coming up

--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -70,7 +70,7 @@
     mode: "u=rw,g=r,o=r"
     owner: "root"
     src: "network-interfaces.j2"
-    validate: "ifup --no-act %s"
+    validate: "ifup --no-act -i %s -a"
   notify: "restart networking interfaces"
   tags:
     - "networking"
