--- a/site.yml
+++ b/site.yml
@@ -12,6 +12,9 @@
         ssh_listen_to: "{{ common__ip_addresses | ansible.netcommon.ipaddr('address') }}"
       when:
         - ansible_version.full is version("2.9.10", ">=")
+  tasks:
+    - name: "Flush handlers from core roles"
+      ansible.builtin.meta: "flush_handlers"
 - import_playbook: "plays/groups/dns.yml"
 - import_playbook: "plays/groups/openstack.yml"
 - import_playbook: "plays/hosts/docker-ssd.hogs.tswn.us.yml"
