--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -61,3 +61,5 @@ common__ntp_pool: "pool.ntp.hogs.tswn.us"
 docker__users:
   - "ansible"
   - "zabbix"
+
+ssh_listen_to: "{{ common__ip_addresses | ansible.netcommon.ipaddr('address') }}"
