allow tcp forwarding on sdwilsh-dev in order to allow vscode remoting to work

--- a/host_vars/sdwilsh-dev.hogs.tswn.us.yml
+++ b/host_vars/sdwilsh-dev.hogs.tswn.us.yml
@@ -15,6 +15,7 @@ common__nameservers:
   addresses:
     - "10.10.0.1"
 
+ssh_allow_tcp_forwarding: "yes"
 ssh_listen_to:
   - "10.10.0.20"
   - "10.117.0.25"
