Manage Zabbix Agent via community.zabbix instead of home-grown setup
Less things for me to maintain is good!

--- a/requirements.yml
+++ b/requirements.yml
@@ -8,5 +8,6 @@ collections:
   - name: community.docker
   - name: community.general
   - name: community.mysql
+  - name: "community.zabbix"
   - name: "devsec.hardening"
   - name: vyos.vyos
