--- a/site.yml
+++ b/site.yml
@@ -24,8 +24,12 @@
     - role: "devsec.hardening.ssh_hardening"
       vars:
         ssh_kerberos_supprt: no
-      when:
-        - ansible_version.full is version("2.9.10", ">=")
+        ssh_kex:
+          # TODO: enable after upgrades to 22.04 are complete
+          # See https://github.com/dev-sec/ansible-collection-hardening/issues/500
+          # - "sntrup761x25519-sha512@openssh.com"
+          - "curve25519-sha256@libssh.org"
+          - "diffie-hellman-group-exchange-sha256"
   tasks:
     - name: "Flush handlers from core roles"
       ansible.builtin.meta: "flush_handlers"
