fixes for 22.04 on a pi

--- a/host_vars/infra1.os.hogs.tswn.us.yml
+++ b/host_vars/infra1.os.hogs.tswn.us.yml
@@ -4,8 +4,8 @@ ansible_cron__interval: "daily"
 common__ethernet_interface_bonds:
   bond0:
     interfaces:
-      - eth0
-      - enx00e04c68012c # This should be eth1, but device now things it is this
+      - "eth0"
+      - "enx00e04c68012c"
 
 common__gateway_v4_address: "10.10.0.1"
 common__ip_addresses:
