--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -184,6 +184,8 @@ bind_zones:
         ip: "10.10.0.60"
       - name: "infra3.os.hogs"
         ip: "10.10.0.62"
+      - name: "compute01.os.hogs"
+        ip: "10.10.0.65"
 
       # Services Networks
       - name: "installation02"
