add aggregation switches to dns

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -180,6 +180,10 @@ bind_zones:
       - name: "power-failover.hogs"
         ip: "10.10.0.32"
         ipv6: "fd36:3eb3:43b0:a::21"
+      - name: "aggregation-upper.hogs.tswn.us"
+        ip: "10.10.0.40"
+      - name: "aggregation-lower.hogs.tswn.us"
+        ip: "10.10.0.41"
       - name: "switch-upper.os.hogs"
         ip: "10.10.0.42"
       - name: "infra1.os.hogs"
