--- a/group_vars/openstack.yml
+++ b/group_vars/openstack.yml
@@ -21,3 +21,7 @@ common_rpi__cm4io_fan:
 common_rpi__cpu_i2c: yes
 common_rpi__i2c_rtc: "pcf85063a,i2c_csi_dsi"
 common_rpi__overclock: yes
+
+# mrlesmithjr.zfs
+zfs_install_update: no # We manage ZFS on our own
+zfs_enable_auto_snapshots: no # Snapshots managed by sanoid
