--- a/host_vars/compute02.os.hogs.tswn.us.yml
+++ b/host_vars/compute02.os.hogs.tswn.us.yml
@@ -10,3 +10,6 @@ common__ethernet_primary_interface: "eth0"
 
 common__ip_addresses:
   - "10.10.0.66/24"
+
+openstack_compute__zpool_devices:
+  - "scsi-SSamsung_SSD_850_EVO_250G_535097654321"
