drop os in hostnames

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -184,17 +184,17 @@ bind_zones:
         ip: "10.10.0.40"
       - name: "aggregation-lower.hogs.tswn.us"
         ip: "10.10.0.41"
-      - name: "switch-upper.os.hogs"
+      - name: "switch-upper.hogs"
         ip: "10.10.0.42"
-      - name: "infra1.os.hogs"
+      - name: "infra1.hogs"
         ip: "10.10.0.60"
-      - name: "infra3.os.hogs"
+      - name: "infra3.hogs"
         ip: "10.10.0.62"
-      - name: "compute01.os.hogs"
+      - name: "compute01.hogs"
         ip: "10.10.0.65"
-      - name: "compute02.os.hogs"
+      - name: "compute02.hogs"
         ip: "10.10.0.66"
-      - name: "storage1.os.hogs"
+      - name: "storage1.hogs"
         ip: "10.10.0.80"
 
       # Services Networks
