add kvms to dns

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -186,6 +186,12 @@ bind_zones:
         ip: "10.10.0.41"
       - name: "switch-upper.hogs"
         ip: "10.10.0.42"
+      - name: "kvm01.hogs"
+        ip: "10.10.0.50"
+      - name: "kvm02.hogs"
+        ip: "10.10.0.51"
+      - name: "kvm03.hogs"
+        ip: "10.10.0.52"
       - name: "infra1.hogs"
         ip: "10.10.0.60"
       - name: "infra3.hogs"
