--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,7 @@
 ---
 roles:
   - name: "bertvv.bind"
+  - name: "mrlesmithjr.manage-lvm"
   - name: "mrlesmithjr.zfs"
   - name: "nickjj.docker"
 collections:
