--- a/host_vars/infra1.hogs.tswn.us.yml
+++ b/host_vars/infra1.hogs.tswn.us.yml
@@ -10,3 +10,7 @@ common__ethernet_primary_interface: "eth0"
 
 common__ip_addresses:
   - "10.10.0.60/24"
+
+openstack_infra__zpool_devices:
+  - "scsi-SSamsung_SSD_870_EVO_500G_3F5397654321"
+  - "scsi-SSamsung_SSD_870_EVO_500G_AAE297654321"
