add br-mgmt to storage

--- a/group_vars/openstack_storage.yml
+++ b/group_vars/openstack_storage.yml
@@ -1,4 +1,8 @@
 ---
+common__ethernet_interface_bridges:
+  br-mgmt:
+    ports:
+      - "bond0.10"
 common_openstack__zfs_volume_keys:
   openstack-storage:
     cinder:
