add infra1 as an ntp server

--- a/firewall_zones/vyos_home/man/from-unifi-man-ipv4.yml
+++ b/firewall_zones/vyos_home/man/from-unifi-man-ipv4.yml
@@ -4,3 +4,11 @@
   protocol: "icmp"
   icmp:
     type_name: any
+- description: "Allow NTP"
+  action: "accept"
+  state:
+    new: true
+  destination:
+    group:
+      address_group: "NTP-SERVICES-v4"
+      port_group: "NTP"
