--- a/firewall_zones/vyos_home/man/from-home-ipv4.yml
+++ b/firewall_zones/vyos_home/man/from-home-ipv4.yml
@@ -4,6 +4,14 @@
   protocol: "icmp"
   icmp:
     type_name: any
+- description: "Allow NTP"
+  action: "accept"
+  state:
+    new: true
+  destination:
+    group:
+      address_group: "NTP-SERVICES-v4"
+      port_group: "NTP"
 - description: "Allow specific hosts"
   action: "accept"
   state:
