Do not automatically upgrade network packages
I run updates manually with a play, so this shouldn't be a part of the
automatic runs that we do.

--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -33,7 +33,7 @@
 - name: "Install Dependencies for /etc/network/interfaces"
   ansible.builtin.apt:
     name: "{{ item }}"
-    state: "latest"
+    state: "present"
   become: yes
   loop:
     - "bridge-utils"
@@ -45,7 +45,7 @@
 - name: "Install Pi Dependencies for /etc/network/interfaces"
   ansible.builtin.apt:
     name: "{{ item }}"
-    state: "latest"
+    state: "present"
   become: yes
   loop:
     - "linux-modules-extra-raspi"
