--- a/host_vars/infra1.hogs.tswn.us.yml
+++ b/host_vars/infra1.hogs.tswn.us.yml
@@ -1,14 +1,23 @@
 ---
 common__be_ntp_server: yes
 
-# TODO: bonding busted on 22.04
-# See https://bugs.launchpad.net/ubuntu/+bug/1980683
-# common__ethernet_interface_bonds:
-#   bond0:
-#     interfaces:
-#       - "eth0"
-#       - "enx00e04c68012c"
-common__ethernet_primary_interface: "eth0"
+common__ethernet_interface_bonds:
+  bond0:
+    interfaces:
+      - "eth0"
+      - "enx00e04c68012c"
+common__ethernet_interface_bridges:
+  br-mgmt:
+    ports:
+      - "bond0.10"
+  br-storage:
+    ports:
+      - "bond0.11"
+    address: "10.11.0.60/24"
+common__ethernet_interface_vlans:
+  bond0.10:
+  enx00e04c68012c.11:
+common__ethernet_primary_interface: "br-mgmt"
 
 common__ip_addresses:
   - "10.10.0.60/24"
