--- a/host_vars/compute02.hogs.tswn.us.yml
+++ b/host_vars/compute02.hogs.tswn.us.yml
@@ -9,5 +9,12 @@ common__ethernet_primary_interface: "br-mgmt"
 common__ip_addresses:
   - "10.10.0.66/24"
 
-openstack_compute__zpool_devices:
-  - "scsi-SSamsung_SSD_850_EVO_250G_535097654321"
+# mrlesmithjr.zfs
+zfs_pools:
+  - name: "openstack"
+    action: "create"
+    compression: "zstd"
+    devices:
+      - "scsi-SSamsung_SSD_850_EVO_250G_535097654321"
+    state: "present"
+    type: "basic"
