--- a/host_vars/infra1.hogs.tswn.us.yml
+++ b/host_vars/infra1.hogs.tswn.us.yml
@@ -14,14 +14,14 @@ common__ethernet_interface_bridges:
     ports:
       - "bond0.11"
     address: "10.11.0.60/24"
-  br-vxlan:
+  br-vlan:
     ports:
-      - "bond0.12"
-    address: "10.12.0.60/24"
+      - "bond0"
 common__ethernet_interface_vlans:
   bond0.10:
   bond0.11:
-  bond0.12:
+  bond0.12: # "br-vxlan"
+    address: "10.12.0.60/24"
 common__ethernet_primary_interface: "br-mgmt"
 
 common__ip_addresses:
