--- a/site.yml
+++ b/site.yml
@@ -42,3 +42,4 @@
 - import_playbook: "plays/hosts/loki.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/monitor.house.gem.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/mysql.hogs.tswn.us.yml"
+- import_playbook: "plays/hosts/sdwilsh-dev.hogs.tswn.us.yml"
